--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
         <item>Stock 4</item>
 
     </string-array>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
